AI-JADEDEVS4/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Add_On_Next_Step__c</fullName>
        <label>Add On Next Step</label>
        <picklist>
            <picklistValues>
                <fullName>1st Contact Attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Contact Attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Contact Attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Contact Attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Quote-Opportunity Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Order Form-Awaiting Signature</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BD_Activity__c</fullName>
        <inlineHelpText>This field is only for the BD reps to track payable actions</inlineHelpText>
        <label>BD Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Attempt 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Attempt 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Attempt 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Attempt 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Attempt 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Attempt 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Attempt 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Attempt 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rec&apos;d Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rec&apos;d Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Meeting (Attended)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Meeting (Scheduled)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BD_Forecast__c</fullName>
        <label>BD Forecast</label>
        <picklist>
            <picklistValues>
                <fullName>Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Rating__c</fullName>
        <label>Call Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Success_Contact_Type__c</fullName>
        <description>Field to categorize the type of communication between Client Success and the account</description>
        <label>Client Success Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>CS - Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS - Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS - Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS - to Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS - Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS - Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS - Escalation to AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS - Escalation to Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS - Post-implementation Consult</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Activity_Date__c</fullName>
        <inlineHelpText>Field records date activity is completed</inlineHelpText>
        <label>Completed Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConnectAndSell_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked when the activity is related to a ConnectAndSell session</inlineHelpText>
        <label>ConnectAndSell Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConnectAndSell_Disposition__c</fullName>
        <inlineHelpText>The disposition of the ConnectAndSell call</inlineHelpText>
        <label>ConnectAndSell Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>--Sales Team Dispositions--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back Later/Date Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Call/Moving Forward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting/Demo Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate Interest/Send Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested/No Reason Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested/Reason Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified Lead/Send Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--ConnectAndSell Agent Dispositions--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged on Hello</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Call-CB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Cal-Rem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax Tone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper Block-CB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper Block-Rem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personleft-Attempt1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personleft-Rem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pitcher Busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number-Rem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_Programatically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Programatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Details__c</fullName>
        <label>Demo Details</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnSite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Demo_Grade__c</fullName>
        <inlineHelpText>This is for the Pre-sales person who performed the demo to grade the quality.</inlineHelpText>
        <label>Demo Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demo_Login_Info__c</fullName>
        <label>Demo Login Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Status__c</fullName>
        <label>Demo Status</label>
        <picklist>
            <picklistValues>
                <fullName>1st Meeting (BD-Partner)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st meeting(cold call/BDR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st meeting (from Partners)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Meeting (inbound lead/BDR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Meeting (inbound lead/Field)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Meeting (NetSuite Customer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Meeting (own effort/Field)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Meeting (Partner + Prospect)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Meeting (Potential Partner)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Meeting (Rejected)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyDials demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales planning instance demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Support (Cut)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DevUsage__c</fullName>
        <label>DevUsage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LID__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Meeting_Recording__c</fullName>
        <label>Meeting Recording</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>Migration source.</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Completed_Date__c</fullName>
        <inlineHelpText>there should be no delta between original completed date and completed date.  this is to check for  &quot;moving&quot; completed 1st meeting.</inlineHelpText>
        <label>Original Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_CreatedDate__c</fullName>
        <inlineHelpText>For use in DaVinci data migration. Retains original create date.</inlineHelpText>
        <label>Original CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Referral_Follow_Up_Contact__c</fullName>
        <inlineHelpText>Contact name from Partner who is doing the lead follow up</inlineHelpText>
        <label>Partner Referral Follow Up Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Referral_Follow_Up_Email__c</fullName>
        <inlineHelpText>Contact email from Partner who is doing the lead follow up</inlineHelpText>
        <label>Partner Referral Follow Up Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Activity__c</fullName>
        <label>Pre-Sales Activity</label>
        <picklist>
            <picklistValues>
                <fullName>1st demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd+ Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Support Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP/RFI Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAS Score Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Comments__c</fullName>
        <inlineHelpText>Pre-Sales use only</inlineHelpText>
        <label>Pre-Sales Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Demo_Details__c</fullName>
        <inlineHelpText>Pre-Sales use only</inlineHelpText>
        <label>Pre-Sales Demo Details</label>
        <picklist>
            <controllingField>Pre_Sales_Demo_Status__c</controllingField>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Demo_Status__c</fullName>
        <inlineHelpText>Pre-Sales use only</inlineHelpText>
        <label>Pre-Sales Demo Status</label>
        <picklist>
            <picklistValues>
                <fullName>1st</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disc Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority_Color__c</fullName>
        <formula>IMAGE(
CASE(  Sales_Activity_Stage__c , 
&quot;1st Attempt to Contact&quot;, &quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVZ&quot;,
&quot;2nd Attempt to Contact&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVZ&quot;,
&quot;3rd Attempt to Contact&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVZ&quot;,
&quot;4th Attempt to Contact&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVZ&quot;,
&quot;5th Attempt to Contact&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVZ&quot;,
&quot;Engaged Customer&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVt&quot;,
&quot;Call Set Up&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVt&quot;,
&quot;Sent Quote&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVy&quot;,
&quot;Sent Order Form- Awaiting Signature&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVy&quot;,
&quot;Follow Up with Internal Resources&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBW8&quot;,
&quot;Follow Up with Customer&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBW8&quot;,
&quot;At Risk- Cancelling&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVo&quot;,
&quot;Payment Past Due&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVo&quot;,
&quot;Received Signed Order&quot;,&quot;https://c.na4.content.force.com/servlet/servlet.FileDownload?file=01560000000zBVy&quot;,
&quot;/s.gif&quot;),
&quot;Priority Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <formula>CASESAFEID(Owner:User.ProfileId)</formula>
        <label>Profile Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Scoping_Status__c</fullName>
        <description>Status field to capture project scoping activities</description>
        <inlineHelpText>Status field to capture project scoping activities</inlineHelpText>
        <label>Project Scoping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Questionnaire Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questionnaire Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questionnaire Review Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-Up with Questionnaire Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested Questionnaire Review Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-Up On Review Call Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Review Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success Pack Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High PAS Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussion with PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistance Completing Questionnaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW Review Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New SOW Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Scoping Customer Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Account__c</fullName>
        <description>OPPORTUNITY-Field to capture the name of the account providing a reference during the sales cycle</description>
        <inlineHelpText>ON OPPORTUNITY-Field to capture the name of the account providing a reference during the sales cycle</inlineHelpText>
        <label>Reference Account</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Grade__c</fullName>
        <description>Grade assigned to rate fit and delivery of account prodiving reference during the sales cycle. GOOD means perfect fit. Average means need was met. Bad indicates a &apos;net negative&apos; from the reference.</description>
        <inlineHelpText>Grade assigned to rate fit and delivery of account prodiving reference during the sales cycle. GOOD means perfect fit. AVERAGE means need was met. BAD indicates a &apos;net negative&apos; from the reference.</inlineHelpText>
        <label>Reference Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Prospect_Account__c</fullName>
        <description>OPPORTUNITY-Field to capture the name of the account providing a reference during the sales cycle/ACCOUNT-Field to capture the name of the prospect referenced for</description>
        <inlineHelpText>ON OPPORTUNITY-Field to capture the name of the account providing a reference during the sales cycle --- ON ACCOUNT-Field to capture the name of the prospect referenced for</inlineHelpText>
        <label>Reference/Prospect Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relaywareid__c</fullName>
        <externalId>true</externalId>
        <label>Relaywareid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Activity_Stage__c</fullName>
        <inlineHelpText>Indicate what stage of the sale this activity relates to</inlineHelpText>
        <label>Sales Activity Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1st Attempt to Contact</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Attempt to Contact</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Attempt to Contact</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged Customer</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Call Set Up</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Quote</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Order Form- Awaiting Signature</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up with Internal Resources</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up with Customer</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up with Partner</fullName>
                <color>#666666</color>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk- Cancelling</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Past Due</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>Received Signed Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Activity__c</fullName>
        <inlineHelpText>Indicate what type of order/sale this activity is related to</inlineHelpText>
        <label>Sales Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Year Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery Free Trial- Adaptive Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery Free Trial- Stand Alone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Model Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check-In Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>